Depurando el proyecto

--- a/app/templates/app/buscar.html
+++ b/app/templates/app/buscar.html
@@ -1,6 +1,7 @@
 {% extends "base/base.html" %}
 {% block titulo %}Buscar{% endblock %}
 {% block cuerpo %}
+<h3>Buscar persona por nombre</h3>
 <form action="/busqueda/" method="get">
   <input type="text" name="q">
   <input type="submit" value="Buscar">
