--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -50,7 +50,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'app' %}">App</a></li>
+            <li><a href="{% url 'buscar' %}">Buscar</a></li>
           </ul>
         </div>
       </div>
